--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
         <script src="https://kit.fontawesome.com/a1580b1b63.js" crossorigin="anonymous"></script>
     </head>
     <body>
+
         <header class="nav-container">
+            
+            <audio controls autoplay>
+                <source src="audio/Dandelions_slowed_+_reverb_Ruth_B_sped_up_+_slowed_320.mp3" type="audio/mpeg">
+            </audio>
 
             <div class="img-logo">
                 <img class="nav-logo" src="img/int/Pin de s_JAIKARUNA en draw en 2022 _ Dibujitos sencillos, Dibujos bonitos, Garabatos lindos _ Cute easy drawings, Cute doodles drawings, Easy drawings.jpg" alt="G&C">
@@ -20,10 +25,10 @@
             </div>
 
             <ul class="first-list">
-                <li class="phtos"><a href="scnpart/galery.html">Fotos</a></li>
+                <li class="phtos"><a href="scnpart/galery.html">Galería</a></li>
                 <li class="menu"><a href="#">Inicio</a></li>
-                <li class="pets"><a href="#">Mascotitas</a></li>
-                <li class="inicio"><a href="#">Recuerdos</a></li>
+                <li class="pets"><a href="#">Palabras</a></li>
+                <li class="inicio"><a href="#">Razones</a></li>
             </ul>
 
             <div class="bottom-ctn">
@@ -147,7 +152,7 @@
         </main>
         <div class="lng-prg">
             <div class="txt-cnt2">
-                <h2>C++ 😼</h2>
+                <h2>Cb++ 😼</h2>
             </div>
         </div>
 
