--- a/scnpart/galery.html
+++ b/scnpart/galery.html
@@ -5,31 +5,210 @@
         <meta name="description" content="Los momentos más bonitos"/>
         <meta name="keywords" content="momentos, anecdotas, amor, primer amor verdadero, felicidad"/>
         <link rel="stylesheet" type="text/css" href="galery.css">
+        <link rel="stylesheet" type="text/css" href="lightbox.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Moments</title>
+        <link rel="icon" href="img/int/crz.png">
         <link rel="icon" href="img/int/crz.png">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
         <script src="https://kit.fontawesome.com/a1580b1b63.js" crossorigin="anonymous"></script>
     </head>
     <body>
 
+        <audio controls autoplay>
+            <source src="../audio/Sunsetz - Cigarettes After Sex - youtube-5-rbSNzU_b8.mp3">
+            <source src="../audio/golden hour - JVKE (320).mp3">
+            <source src="../audio/Lord_Huron_The_Night_We_Met_Official_Lyric_Video_youtube_wGF7PswOENQ.mp3">
+            <source src="../audio/Enculado (feat. Nsqk) - Yukun  NSQK (320).mp3">
+        </audio>
+
         <header class="first-cnt">
-            <h2>fotos</h2>
+            <h2>Recuerdos :D</h2>
         </header>
 
-        <div class="gallery">
-            <div class="gallery-item"></div>
-            <div class="gallery-item"></div>
-            <div class="gallery-item"></div>
-            <div class="gallery-item"></div>
-            <div class="gallery-item"></div>
-            <div class="gallery-item"></div>
+        <div class="container">
+            <div class="gallery">
+
+                <a href="../img gallery/WhatsApp Image 2023-07-27 at 4.57.34 AM (1).jpeg" data-lightbox="models" data-title="Imagen1">
+                    <img src="../img gallery/WhatsApp Image 2023-07-27 at 4.57.34 AM (1).jpeg">
+                </a>
+
+                <a href="../img gallery/WhatsApp Image 2023-07-27 at 4.57.34 AM (2).jpeg" data-lightbox="models" data-title="Imagen2">
+                    <img src="../img gallery/WhatsApp Image 2023-07-27 at 4.57.34 AM (2).jpeg">
+                </a>
+
+                <a href="../img gallery/WhatsApp Image 2023-07-27 at 4.57.34 AM.jpeg" data-lightbox="models" data-title="Imagen3">
+                    <img src="../img gallery/WhatsApp Image 2023-07-27 at 4.57.34 AM.jpeg">
+                </a>
+
+                <a class="imgr " href="../img gallery/WhatsApp Image 2023-07-27 at 4.58.42 AM.jpeg" data-lightbox="models" data-title="Imagen4">
+                    <img src="../img gallery/WhatsApp Image 2023-07-27 at 4.58.42 AM.jpeg">
+                </a>
+
+                <a class="imgh" href="../img gallery/WhatsApp Image 2023-07-27 at 4.58.43 AM (1).jpeg" data-lightbox="models" data-title="Imagen5">
+                    <img src="../img gallery/WhatsApp Image 2023-07-27 at 4.58.43 AM (1).jpeg">
+                </a>
+
+                <a class="imgr " href="../img gallery/WhatsApp Image 2023-07-27 at 4.58.43 AM.jpeg" data-lightbox="models" data-title="Imagen6">
+                    <img src="../img gallery/WhatsApp Image 2023-07-27 at 4.58.43 AM.jpeg">
+                </a>
+
+                <a class="imgr " href="../img gallery/WhatsApp Image 2023-07-27 at 4.58.44 AM (1).jpeg" data-lightbox="models" data-title="Imagen7">
+                    <img src="../img gallery/WhatsApp Image 2023-07-27 at 4.58.44 AM (1).jpeg">
+                </a>
+
+                <a class="imgh " href="../img gallery/WhatsApp Image 2023-07-27 at 4.58.44 AM (2).jpeg" data-lightbox="models" data-title="Imagen8">
+                    <img src="../img gallery/WhatsApp Image 2023-07-27 at 4.58.44 AM (2).jpeg">
+                </a>
+
+                <a class="af" href="../img gallery/WhatsApp Image 2023-07-27 at 4.58.44 AM (3).jpeg" data-lightbox="models" data-title="Imagen9">
+                    <img src="../img gallery/WhatsApp Image 2023-07-27 at 4.58.44 AM (3).jpeg">
+                </a>
+
+                <a class="imgr " href="../img gallery/WhatsApp Image 2023-07-27 at 4.58.44 AM.jpeg" data-lightbox="models" data-title="Imagen10">
+                    <img src="../img gallery/WhatsApp Image 2023-07-27 at 4.58.44 AM.jpeg">
+                </a>
+
+                <a class="af" href="../img gallery/WhatsApp Image 2023-07-27 at 4.58.45 AM (1).jpeg" data-lightbox="models" data-title="Imagen">
+                    <img src="../img gallery/WhatsApp Image 2023-07-27 at 4.58.45 AM (1).jpeg">
+                </a>
+
+                <a class="af" href="../img gallery/WhatsApp Image 2023-07-27 at 4.58.45 AM (2).jpeg" data-lightbox="models" data-title="Imagen">
+                    <img src="../img gallery/WhatsApp Image 2023-07-27 at 4.58.45 AM (2).jpeg">
+                </a>
+
+                <a class="af " href="../img gallery/WhatsApp Image 2023-07-27 at 4.58.45 AM.jpeg" data-lightbox="models" data-title="Imagen">
+                    <img src="../img gallery/WhatsApp Image 2023-07-27 at 4.58.45 AM.jpeg">
+                </a>
+
+                <a class="af " href="../img gallery/WhatsApp Image 2023-07-27 at 4.58.46 AM (1).jpeg" data-lightbox="models" data-title="Imagen">
+                    <img src="../img gallery/WhatsApp Image 2023-07-27 at 4.58.46 AM (1).jpeg">
+                </a>
+
+                <a class="af " href="../img gallery/WhatsApp Image 2023-07-27 at 4.58.46 AM (2).jpeg" data-lightbox="models" data-title="Imagen">
+                    <img src="../img gallery/WhatsApp Image 2023-07-27 at 4.58.46 AM (2).jpeg">
+                </a>
+
+                <a class="af " href="../img gallery/WhatsApp Image 2023-07-27 at 4.58.46 AM.jpeg" data-lightbox="models" data-title="Imagen">
+                    <img src="../img gallery/WhatsApp Image 2023-07-27 at 4.58.46 AM.jpeg">
+                </a>
+
+                <a class="af " href="../img gallery/WhatsApp Image 2023-07-27 at 4.58.47 AM (1).jpeg" data-lightbox="models" data-title="Imagen">
+                    <img src="../img gallery/WhatsApp Image 2023-07-27 at 4.58.47 AM (1).jpeg">
+                </a>
+
+                <a class="imgr " href="../img gallery/WhatsApp Image 2023-07-27 at 4.58.47 AM (2).jpeg" data-lightbox="models" data-title="Imagen">
+                    <img src="../img gallery/WhatsApp Image 2023-07-27 at 4.58.47 AM (2).jpeg">
+                </a>
+
+                <a class="imgr " href="../img gallery/WhatsApp Image 2023-07-27 at 4.58.47 AM (3).jpeg" data-lightbox="models" data-title="Imagen">
+                    <img src="../img gallery/WhatsApp Image 2023-07-27 at 4.58.47 AM (3).jpeg">
+                </a>
+
+                <a class="af imgw imgh " href="../img gallery/WhatsApp Image 2023-07-27 at 4.58.47 AM.jpeg" data-lightbox="models" data-title="Imagen">
+                    <img src="../img gallery/WhatsApp Image 2023-07-27 at 4.58.47 AM.jpeg">
+                </a>
+
+                <a class="imgr " href="../img gallery/WhatsApp Image 2023-07-27 at 4.58.48 AM (1).jpeg" data-lightbox="models" data-title="Imagen">
+                    <img src="../img gallery/WhatsApp Image 2023-07-27 at 4.58.48 AM (1).jpeg">
+                </a>
+
+                <a class="af " href="../img gallery/WhatsApp Image 2023-07-27 at 4.58.48 AM (2).jpeg" data-lightbox="models" data-title="Imagen">
+                    <img src="../img gallery/WhatsApp Image 2023-07-27 at 4.58.48 AM (2).jpeg">
+                </a>
+
+                <a class="imgr " href="../img gallery/WhatsApp Image 2023-07-27 at 4.58.48 AM (3).jpeg" data-lightbox="models" data-title="Imagen">
+                    <img src="../img gallery/WhatsApp Image 2023-07-27 at 4.58.48 AM (3).jpeg">
+                </a>
+
+                <a class="imgr " href="../img gallery/WhatsApp Image 2023-07-27 at 4.58.48 AM.jpeg" data-lightbox="models" data-title="Imagen">
+                    <img src="../img gallery/WhatsApp Image 2023-07-27 at 4.58.48 AM.jpeg">
+                </a>
+
+                <a class="imgr " href="../img gallery/WhatsApp Image 2023-07-27 at 4.58.49 AM.jpeg" data-lightbox="models" data-title="Imagen">
+                    <img src="../img gallery/WhatsApp Image 2023-07-27 at 4.58.49 AM.jpeg">
+                </a>
+
+                <a class="af " href="../img gallery/WhatsApp Image 2023-07-27 at 4.58.50 AM (1).jpeg" data-lightbox="models" data-title="Imagen">
+                    <img src="../img gallery/WhatsApp Image 2023-07-27 at 4.58.50 AM (1).jpeg">
+                </a>
+
+                <a class="af aft" href="../img gallery/WhatsApp Image 2023-07-27 at 4.58.50 AM (2).jpeg" data-lightbox="models" data-title="Imagen">
+                    <img src="../img gallery/WhatsApp Image 2023-07-27 at 4.58.50 AM (2).jpeg">
+                </a>
+
+                <a class="af aft" href="../img gallery/WhatsApp Image 2023-07-27 at 4.58.50 AM (3).jpeg" data-lightbox="models" data-title="Imagen">
+                    <img src="../img gallery/WhatsApp Image 2023-07-27 at 4.58.50 AM (3).jpeg">
+                </a>
+
+                <a class="imgr " href="../img gallery/WhatsApp Image 2023-07-27 at 4.58.50 AM.jpeg" data-lightbox="models" data-title="Imagen">
+                    <img src="../img gallery/WhatsApp Image 2023-07-27 at 4.58.50 AM.jpeg">
+                </a>
+
+                <a class="imgr " href="../img gallery/" data-lightbox="models" data-title="Imagen">
+                    <img src="../img gallery/">
+                </a>
+
+                <a class="imgr " href="../img gallery/" data-lightbox="models" data-title="Imagen">
+                    <img src="../img gallery/">
+                </a>
+
+                <a class="imgr " href="../img gallery/" data-lightbox="models" data-title="Imagen">
+                    <img src="../img gallery/">
+                </a>
+
+                <a class="imgr " href="../img gallery/" data-lightbox="models" data-title="Imagen">
+                    <img src="../img gallery/">
+                </a>
+
+                <a class="imgr " href="../img gallery/" data-lightbox="models" data-title="Imagen">
+                    <img src="../img gallery/">
+                </a>
+
+                <a class="imgr " href="../img gallery/" data-lightbox="models" data-title="Imagen">
+                    <img src="../img gallery/">
+                </a>
+
+                <a class="imgr " href="../img gallery/" data-lightbox="models" data-title="Imagen">
+                    <img src="../img gallery/">
+                </a>
+
+                <a class="imgr " href="../img gallery/" data-lightbox="models" data-title="Imagen">
+                    <img src="../img gallery/">
+                </a>
+
+                <a class="imgr " href="../img gallery/" data-lightbox="models" data-title="Imagen">
+                    <img src="../img gallery/">
+                </a>
+
+                <a class="imgr " href="../img gallery/" data-lightbox="models" data-title="Imagen">
+                    <img src="../img gallery/">
+                </a>
+
+                <a class="imgr " href="../img gallery/" data-lightbox="models" data-title="Imagen">
+                    <img src="../img gallery/">
+                </a>
+
+                <a class="imgr " href="../img gallery/" data-lightbox="models" data-title="Imagen">
+                    <img src="../img gallery/">
+                </a>
+
+                <a class="imgr " href="../img gallery/" data-lightbox="models" data-title="Imagen">
+                    <img src="../img gallery/">
+                </a>
+
+                <a class="imgr " href="../img gallery/" data-lightbox="models" data-title="Imagen">
+                    <img src="../img gallery/">
+                </a>
+
+            </div>
         </div>
         
 
 
 
         <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+        <script src="lightbox-plus-jquery.min.js"></script>
         <script src="galery.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     </body>
